# PlatinumDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mark/platinumdlnademo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/android/: LogMessage.cpp  StrHelper.cpp
app/src/main/cpp/dlna/: SsdpDiscovery.cpp  SsdpDiscovery.h
app/src/main/cpp/tcp/: TcpService.h
app/src/main/cpp/udp/: UdpHeadMessage.cpp  UdpHeadMessage.h
app/src/main/java/com/mark/platinumdlnademo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mark/platinumdlnademo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
